prueba desde vscode

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h1 class="headerPrincipal-titulo">
 				<a href="#">Mini Alura</a>
 			</h1>
-
+<!--esto  es una prueba /-->
 			<nav class="headerPrincipal-nav">
 				<a class="headerPrincipal-nav-link" href="#">Home</a>
 				<a class="headerPrincipal-nav-link" href="#">Cursos</a>
